# Iac

./: .gitignore  CMakeLists.txt  calculos.cpp  calculos.hpp  cli.cpp  cli.hpp  iac.kdev4  main.cpp  menuIA.cpp  menuIA.hpp  textosMenus.cpp
.kdev4/: iac.kdev4
